--- a/merchandise.html
+++ b/merchandise.html
@@ -74,6 +74,26 @@
                     <p class="quantity">Quantity: 50</p>
                     <a href="product-link-1" class="buy-now">Buy Now</a>
                 </div>
+
+                 <div class="product-item">
+                    <div class="stock-ribbon in-stock">In Stock</div>
+                    <div class="sale-ribbon">Sale</div>
+                    <img src="images/product1.jpg" alt="Product 1">
+                    <h3>Product Name 1</h3>
+                    <p class="price"><span class="original-price">$25.99</span> $19.99 <span class="discount">(23% off)</span></p>
+                    <p class="quantity">Quantity: 50</p>
+                    <a href="product-link-1" class="buy-now">Buy Now</a>
+                </div>
+
+                 <div class="product-item">
+                    <div class="stock-ribbon in-stock">In Stock</div>
+                    <div class="sale-ribbon">Sale</div>
+                    <img src="images/product1.jpg" alt="Product 1">
+                    <h3>Product Name 1</h3>
+                    <p class="price"><span class="original-price">$25.99</span> $19.99 <span class="discount">(23% off)</span></p>
+                    <p class="quantity">Quantity: 50</p>
+                    <a href="product-link-1" class="buy-now">Buy Now</a>
+                </div>
                 <!-- More Product Items On Sale -->
             </div>
         </section>
@@ -82,6 +102,24 @@
             <h2>New Arrivals</h2>
             <div class="product-grid">
                 <!-- Example New Arrival Product Item -->
+                <div class="product-item">
+                    <div class="stock-ribbon in-stock">In Stock</div>
+                    <img src="images/product2.jpg" alt="Product 2">
+                    <h3>Product Name 2</h3>
+                    <p class="price">$24.99</p>
+                    <p class="quantity">Quantity: 30</p>
+                    <a href="product-link-2" class="buy-now">Buy Now</a>
+                </div>
+
+                <div class="product-item">
+                    <div class="stock-ribbon in-stock">In Stock</div>
+                    <img src="images/product2.jpg" alt="Product 2">
+                    <h3>Product Name 2</h3>
+                    <p class="price">$24.99</p>
+                    <p class="quantity">Quantity: 30</p>
+                    <a href="product-link-2" class="buy-now">Buy Now</a>
+                </div>
+
                 <div class="product-item">
                     <div class="stock-ribbon in-stock">In Stock</div>
                     <img src="images/product2.jpg" alt="Product 2">
@@ -106,6 +144,24 @@
                     <p class="quantity">Quantity: 20</p>
                     <a href="product-link-3" class="buy-now">Buy Now</a>
                 </div>
+
+                <div class="product-item">
+                    <div class="stock-ribbon in-stock">In Stock</div>
+                    <img src="images/product3.jpg" alt="Product 3">
+                    <h3>Product Name 3</h3>
+                    <p class="price">$29.99</p>
+                    <p class="quantity">Quantity: 20</p>
+                    <a href="product-link-3" class="buy-now">Buy Now</a>
+                </div>
+
+                <div class="product-item">
+                    <div class="stock-ribbon in-stock">In Stock</div>
+                    <img src="images/product3.jpg" alt="Product 3">
+                    <h3>Product Name 3</h3>
+                    <p class="price">$29.99</p>
+                    <p class="quantity">Quantity: 20</p>
+                    <a href="product-link-3" class="buy-now">Buy Now</a>
+                </div>
                 <!-- More Popular Product Items -->
             </div>
         </section>
@@ -114,6 +170,26 @@
             <h2>All Products</h2>
             <div class="product-grid">
                 <!-- Example Product Item -->
+                <div class="product-item">
+                    <div class="stock-ribbon in-stock">In Stock</div>
+                    <div class="sale-ribbon">Sale</div>
+                    <img src="images/product1.jpg" alt="Product 1">
+                    <h3>Product Name 1</h3>
+                    <p class="price"><span class="original-price">$25.99</span> $19.99 <span class="discount">(23% off)</span></p>
+                    <p class="quantity">Quantity: 50</p>
+                    <a href="product-link-1" class="buy-now">Buy Now</a>
+                </div>
+
+                <div class="product-item">
+                    <div class="stock-ribbon in-stock">In Stock</div>
+                    <div class="sale-ribbon">Sale</div>
+                    <img src="images/product1.jpg" alt="Product 1">
+                    <h3>Product Name 1</h3>
+                    <p class="price"><span class="original-price">$25.99</span> $19.99 <span class="discount">(23% off)</span></p>
+                    <p class="quantity">Quantity: 50</p>
+                    <a href="product-link-1" class="buy-now">Buy Now</a>
+                </div>
+
                 <div class="product-item">
                     <div class="stock-ribbon in-stock">In Stock</div>
                     <div class="sale-ribbon">Sale</div>
