--- a/merchandise.html
+++ b/merchandise.html
@@ -74,69 +74,19 @@
         <section id="new-arrivals">
             <h2>New Arrivals</h2>
             <div class="product-grid">
-                <!-- Example New Arrival Product Item -->
-                <div class="product-item">
-                    <div class="stock-ribbon in-stock">In Stock</div>
-                    <img src="images/product2.jpg" alt="Product 2">
-                    <h3>Product Name 2</h3>
-                    <p class="price">$24.99</p>
-                    <p class="quantity">Quantity: 30</p>
-                    <a href="product-link-2" class="buy-now">Buy Now</a>
-                </div>
-
-                <div class="product-item">
-                    <div class="stock-ribbon in-stock">In Stock</div>
-                    <img src="images/product2.jpg" alt="Product 2">
-                    <h3>Product Name 2</h3>
-                    <p class="price">$24.99</p>
-                    <p class="quantity">Quantity: 30</p>
-                    <a href="product-link-2" class="buy-now">Buy Now</a>
-                </div>
-
-                <div class="product-item">
-                    <div class="stock-ribbon in-stock">In Stock</div>
-                    <img src="images/product2.jpg" alt="Product 2">
-                    <h3>Product Name 2</h3>
-                    <p class="price">$24.99</p>
-                    <p class="quantity">Quantity: 30</p>
-                    <a href="product-link-2" class="buy-now">Buy Now</a>
-                </div>
-                <!-- More New Arrival Product Items -->
+                <!-- Product items go here -->
             </div>
+            <!-- Message for no products on sale -->
+            <div class="no-sale-message">No products in the New Arrivals Check back later!</div>
         </section>
 
         <section id="popular">
             <h2>Popular</h2>
             <div class="product-grid">
-                <!-- Example Popular Product Item -->
-                <div class="product-item">
-                    <div class="stock-ribbon in-stock">In Stock</div>
-                    <img src="images/product3.jpg" alt="Product 3">
-                    <h3>Product Name 3</h3>
-                    <p class="price">$29.99</p>
-                    <p class="quantity">Quantity: 20</p>
-                    <a href="product-link-3" class="buy-now">Buy Now</a>
-                </div>
-
-                <div class="product-item">
-                    <div class="stock-ribbon in-stock">In Stock</div>
-                    <img src="images/product3.jpg" alt="Product 3">
-                    <h3>Product Name 3</h3>
-                    <p class="price">$29.99</p>
-                    <p class="quantity">Quantity: 20</p>
-                    <a href="product-link-3" class="buy-now">Buy Now</a>
-                </div>
-
-                <div class="product-item">
-                    <div class="stock-ribbon in-stock">In Stock</div>
-                    <img src="images/product3.jpg" alt="Product 3">
-                    <h3>Product Name 3</h3>
-                    <p class="price">$29.99</p>
-                    <p class="quantity">Quantity: 20</p>
-                    <a href="product-link-3" class="buy-now">Buy Now</a>
-                </div>
-                <!-- More Popular Product Items -->
+                <!-- Product items go here -->
             </div>
+            <!-- Message for no products on sale -->
+            <div class="no-sale-message">No products are currently popular. Check back later!</div>
         </section>
 
         <section id="all-products">
@@ -145,32 +95,11 @@
                 <!-- Example Product Item -->
                 <div class="product-item">
                     <div class="stock-ribbon in-stock">In Stock</div>
-                    <div class="sale-ribbon">Sale</div>
-                    <img src="images/product1.jpg" alt="Product 1">
-                    <h3>Product Name 1</h3>
-                    <p class="price"><span class="original-price">$25.99</span> $19.99 <span class="discount">(23% off)</span></p>
-                    <p class="quantity">Quantity: 50</p>
-                    <a href="product-link-1" class="buy-now">Buy Now</a>
-                </div>
-
-                <div class="product-item">
-                    <div class="stock-ribbon in-stock">In Stock</div>
-                    <div class="sale-ribbon">Sale</div>
-                    <img src="images/product1.jpg" alt="Product 1">
-                    <h3>Product Name 1</h3>
-                    <p class="price"><span class="original-price">$25.99</span> $19.99 <span class="discount">(23% off)</span></p>
-                    <p class="quantity">Quantity: 50</p>
-                    <a href="product-link-1" class="buy-now">Buy Now</a>
-                </div>
-
-                <div class="product-item">
-                    <div class="stock-ribbon in-stock">In Stock</div>
-                    <div class="sale-ribbon">Sale</div>
-                    <img src="images/product1.jpg" alt="Product 1">
-                    <h3>Product Name 1</h3>
-                    <p class="price"><span class="original-price">$25.99</span> $19.99 <span class="discount">(23% off)</span></p>
-                    <p class="quantity">Quantity: 50</p>
-                    <a href="product-link-1" class="buy-now">Buy Now</a>
+                    <img src="product_images/beanie-hat.jpg" alt="Product 1">
+                    <h3>Beanie Hat</h3>
+                    <p class="price">$17.48</p>
+                    <p class="quantity">Quantity: 999+</p>
+                    <a href="https://rivers-merch-store.printify.me/product/14064378/beanie-hat?category=kids-clothing" class="buy-now">Buy Now</a>
                 </div>
                 <!-- More Product Items -->
             </div>
