--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
         <p><span>Price:</span> $853.98</p>
         <p><span>Date Released:</span> September 22, 2023</p>
         <p><span>Date Bought:</span> May 17, 2024</p>
-        <p><span>OS Version:</span> WatchOS 11.3 (22S555)</p>
+        <p><span>OS Version:</span> WatchOS 11.3.1 (22S555)</p>
         <p><span>Battery Health:</span></p>
         <div class="battery-icon">
             <div class="battery-level" style="width: 97%;"></div>
@@ -622,7 +622,7 @@
         <p><span>Price:</span> $742.29</p>
         <p><span>Date Released:</span> January 17, 2023</p>
         <p><span>Date Bought:</span> May 16, 2024</p>
-        <p><span>OS Version:</span> macOS Sequoia 15.3 Beta (24D5055b)</p>
+        <p><span>OS Version:</span> macOS Sequoia 15.3.1 (24D5055b)</p>
     </div>
 </div>
 
