--- a/merchandise.html
+++ b/merchandise.html
@@ -101,7 +101,7 @@
         <section id="all-products">
             <div class="section-header">
                 <h2>All Products</h2>
-                <span class="product-count">(2)</span>
+                <span class="product-count">(4)</span>
             </div>
             <div class="product-grid">
                 <!-- Example Product Item -->
@@ -121,6 +121,24 @@
                     <p class="price">$27.83</p>
                     <p class="quantity">Quantity: 999+</p>
                     <a href="https://rivers-merch-store.printify.me/product/14064377/onesie-organic-baby-bodysuit?category=kids-clothing" class="buy-now">Buy Now</a>
+                </div>
+
+                <div class="product-item">
+                    <div class="stock-ribbon in-stock">In Stock</div>
+                    <img src="product_images/short-sleeve-t-shirt.jpg" alt="Product 3">
+                    <h3>Short Sleeve T-Shirt</h3>
+                    <p class="price">$13.73</p>
+                    <p class="quantity">Quantity: 999+</p>
+                    <a href="https://rivers-merch-store.printify.me/product/13858835/short-sleeve-t-shirt?category=kids-clothing" class="buy-now">Buy Now</a>
+                </div>
+
+                <div class="product-item">
+                    <div class="stock-ribbon in-stock">In Stock</div>
+                    <img src="product_images/infant-fine-jersey-tee.jpg" alt="Product 4">
+                    <h3>Infant Fine Jersey Tee</h3>
+                    <p class="price">$20.22</p>
+                    <p class="quantity">Quantity: 999+</p>
+                    <a href="https://rivers-merch-store.printify.me/product/13853306/infant-fine-jersey-tee?category=kids-clothing" class="buy-now">Buy Now</a>
                 </div>
                 <!-- More Product Items -->
             </div>
@@ -141,10 +159,10 @@
         <section id="kids">
             <div class="section-header">
                 <h2>Kids</h2>
-                <span class="product-count">(2)</span>
+                <span class="product-count">(4)</span>
              </div>
              <div class="product-grid">
-                <!-- Example Product Item -->
+                <!-- Product Item -->
                 <div class="product-item">
                     <div class="stock-ribbon in-stock">In Stock</div>
                     <img src="product_images/beanie-hat.jpg" alt="Product 1">
@@ -161,6 +179,24 @@
                     <p class="price">$27.83</p>
                     <p class="quantity">Quantity: 999+</p>
                     <a href="https://rivers-merch-store.printify.me/product/14064377/onesie-organic-baby-bodysuit?category=kids-clothing" class="buy-now">Buy Now</a>
+                </div>
+
+                 <div class="product-item">
+                    <div class="stock-ribbon in-stock">In Stock</div>
+                    <img src="product_images/short-sleeve-t-shirt.jpg" alt="Product 3">
+                    <h3>Short Sleeve T-Shirt</h3>
+                    <p class="price">$13.73</p>
+                    <p class="quantity">Quantity: 999+</p>
+                    <a href="https://rivers-merch-store.printify.me/product/13858835/short-sleeve-t-shirt?category=kids-clothing" class="buy-now">Buy Now</a>
+                </div>
+
+                 <div class="product-item">
+                    <div class="stock-ribbon in-stock">In Stock</div>
+                    <img src="product_images/infant-fine-jersey-tee.jpg" alt="Product 4">
+                    <h3>Infant Fine Jersey Tee</h3>
+                    <p class="price">$20.22</p>
+                    <p class="quantity">Quantity: 999+</p>
+                    <a href="https://rivers-merch-store.printify.me/product/13853306/infant-fine-jersey-tee?category=kids-clothing" class="buy-now">Buy Now</a>
                 </div>
                 <!-- More Product Items -->
             </div>
