--- a/merchandise.html
+++ b/merchandise.html
@@ -101,7 +101,7 @@
         <section id="all-products">
             <div class="section-header">
                 <h2>All Products</h2>
-                <span class="product-count">(4)</span>
+                <span class="product-count">(6)</span>
             </div>
             <div class="product-grid">
                 <!-- Example Product Item -->
@@ -149,6 +149,15 @@
                     <p class="quantity">Quantity: 999+</p>
                     <a href="https://rivers-merch-store.printify.me/product/15486390/1-school-bus-driver-iphone-tough-case?category=accessories" class="buy-now">Buy Now</a>
                 </div>
+
+                <div class="product-item">
+                    <div class="stock-ribbon in-stock">In Stock</div>
+                    <img src="product_images/bus-army-impact-resistant-cases-for-samsung-and-apple.jpg" alt="Product 6">
+                    <h3>Bus Army Impact Resistant Cases for Samsung and Apple</h3>
+                    <p class="price">$27.99 - $24.99</p>
+                    <p class="quantity">Quantity: 999+</p>
+                    <a href="https://rivers-merch-store.printify.me/product/15486389/bus-army-impact-resistant-cases-for-samsung-and-apple?category=accessories" class="buy-now">Buy Now</a>
+                </div>
                 <!-- More Product Items -->
             </div>
         </section>
@@ -156,7 +165,7 @@
         <section id="accessories">
             <div class="section-header">
                 <h2>Accessories</h2>
-                <span class="product-count">(1)</span>
+                <span class="product-count">(2)</span>
             </div>
             <div class="product-grid">
                 <!-- Example Product Item -->
@@ -167,6 +176,15 @@
                     <p class="price">$15.99</p>
                     <p class="quantity">Quantity: 999+</p>
                     <a href="https://rivers-merch-store.printify.me/product/15486390/1-school-bus-driver-iphone-tough-case?category=accessories" class="buy-now">Buy Now</a>
+                </div>
+
+                <div class="product-item">
+                    <div class="stock-ribbon in-stock">In Stock</div>
+                    <img src="product_images/bus-army-impact-resistant-cases-for-samsung-and-apple.jpg" alt="Product 6">
+                    <h3>Bus Army Impact Resistant Cases for Samsung and Apple</h3>
+                    <p class="price">$27.99 - $24.99</p>
+                    <p class="quantity">Quantity: 999+</p>
+                    <a href="https://rivers-merch-store.printify.me/product/15486389/bus-army-impact-resistant-cases-for-samsung-and-apple?category=accessories" class="buy-now">Buy Now</a>
                 </div>
             <!-- More Product Items -->
             </div>
