--- a/settings.html
+++ b/settings.html
@@ -113,6 +113,16 @@
         <a href="accessibility-statement.html">Accessibility Statement</a>
     </footer>
 
+    <iframe 
+              src="https://bus-army-dude.instatus.com/embed-status/4e365a41/light-lg" 
+              width="auto" 
+              height="auto" 
+              frameBorder="0" 
+              scrolling="no" 
+              style="border: none;"
+            >
+          </iframe>
+    
    <!-- Cookie Consent Banner -->
 <div id="cookie-consent-banner">
     <p>We use cookies to improve your experience. By using our site, you agree to our <a href="cookie-policy.html">cookie policy</a>.</p>
