--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             <a href="https://rivers-merch-store.printify.me/products" target="_blank" class="link-button">Merch Store (Printify)</a>
             <a href="https://riverkritzar-shop.fourthwall.com/" target="_blank" class="link-button">Merch Store (Fourthwall)</a>
             <a href="https://discord.gg/NjMtuZYc52" target="_blank" class="link-button">Join the Bus Army Dude's Community Discord Server!</a>
-            <a href="https://busarmydudesprofile.statuspage.io/" target="_blank" class="link-button">Bus Army Dude's Website Status Page</a>
+            <a href="https://bus-army-dude.instatus.com/" target="_blank" class="link-button">Bus Army Dude's Website Status Page</a>
         </div>
     </div>
 
