--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
 
           <iframe 
               src="https://bus-army-dude.instatus.com/embed-status/4e365a41/light-lg" 
-              width="230" 
+              width="730" 
               height="61" 
               frameBorder="0" 
-              scrolling="yes" 
+              scrolling="no" 
               style="border: none;"
             >
           </iframe>
