--- a/settings.html
+++ b/settings.html
@@ -21,12 +21,11 @@
 </head>
 
 <body class="settings-page">
-    <a href="#main-content" class="skip-link">Skip to main content</a>
-    <div class="container" role="main" id="main-content">
+    <div class="container">
         <div class="settings-section">
             <div class="settings-header">
                 <h1>Settings</h1>
-                <span class="version">v1.12.0</span>
+                <span class="version">v1.11.0</span>
             </div>
 
             <div class="settings-group">
@@ -43,18 +42,20 @@
                             <span class="toggle-slider"></span>
                         </label>
                     </div>
-                    <!-- Adjustable Text Size -->
+                </div>
+
+                <!-- Accessibility Section -->
+                <div class="settings-subsection">
+                    <h2 class="subsection-title">Accessibility</h2>
                     <div class="setting-card">
                         <div class="setting-label">
-                            <h3 class="setting-title">Text Size</h3>
-                            <p class="setting-description">Adjust the text size for better readability</p>
+                            <h3 class="setting-title">Font Size</h3>
+                            <p class="setting-description">Adjust text size</p>
                         </div>
-                        <label for="text-size">Text Size:</label>
-                        <select id="text-size" onchange="adjustTextSize(this.value)">
-                            <option value="default">Default</option>
-                            <option value="large">Large</option>
-                            <option value="larger">Larger</option>
-                        </select>
+                        <div class="font-size-control">
+                            <input type="range" id="fontSizeRange" min="10" max="30" value="16" aria-label="Adjust font size">
+                            <span id="currentFontSize">16px</span>
+                        </div>
                     </div>
                 </div>
 
@@ -62,17 +63,17 @@
                 <div class="settings-subsection owner-only">
                     <h2 class="subsection-title">Owner Only Settings</h2>
                     
-                    <!-- Maintenance Mode -->
-                    <div class="setting-card">
-                        <div class="setting-label">
-                            <h3 class="setting-title">Maintenance Mode</h3>
-                            <p class="setting-description">Put the site into maintenance mode for updates</p>
-                        </div>
-                        <label class="toggle-switch">
-                            <input type="checkbox" id="maintenanceModeToggle">
-                            <span class="toggle-slider"></span>
-                        </label>
+                <!-- Maintenance Mode -->
+                <div class="setting-card">
+                    <div class="setting-label">
+                        <h3 class="setting-title">Maintenance Mode</h3>
+                        <p class="setting-description">Put the site into maintenance mode for updates</p>
                     </div>
+                    <label class="toggle-switch">
+                        <input type="checkbox" id="maintenanceModeToggle" />
+                        <span class="toggle-slider"></span>
+                    </label>
+                </div>
 
                     <!-- Profile Status -->
                     <div class="setting-card">
@@ -101,43 +102,16 @@
                 </div>
             </div>
 
-            <a href="index.html" class="back-link" tabindex="0">← Back to Profile</a>
+            <a href="index.html" class="back-link">← Back to Profile</a>
         </div>
     </div>
 
     <!-- Footer -->
     <footer>
         <p>© <span id="current-year"></span> Bus Army Dude. All Rights Reserved.</p>
-        <a href="privacy-policy.html">Privacy Policy</a>
-        <a href="terms-of-service.html">Terms of Service</a>
-        <a href="accessibility-statement.html">Accessibility Statement</a>
     </footer>
-
-    <style>
-  .responsive-iframe {
-    width: 100%;
-    max-width: 495px;
-    height: auto;
-    aspect-ratio: 8.1; /* Maintain the original aspect ratio (495/61) */
-    border: none;
-  }
-</style>
-
-<iframe 
-  class="responsive-iframe"
-  src="https://bus-army-dude.instatus.com/embed-status/4e365a41/light-lg" 
-  frameBorder="0" 
-  scrolling="no">
-</iframe>
     
-   <!-- Cookie Consent Banner -->
-<div id="cookie-consent-banner">
-    <p>We use cookies to improve your experience. By using our site, you agree to our <a href="cookie-policy.html">cookie policy</a>.</p>
-    <button onclick="acceptCookies()">Accept</button>
-</div>
-
     <!-- Scripts -->
     <script src="settings.js"></script>
-    <script src="https://busarmydudesprofile.statuspage.io/embed/script.js"></script>
 </body>
 </html>
