--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
             <div class="battery-level" style="width: 100%;"></div>
             <div class="battery-percentage">100%</div>
         </div>
-        <p><span>Battery Charge Cycles:</span> 146</p>
+        <p><span>Battery Charge Cycles:</span> 155</p>
     </div>
     
     <!-- Apple Watch Ultra 2 Section -->
@@ -619,7 +619,7 @@
         <p><span>Price:</span> $853.98</p>
         <p><span>Date Released:</span> September 22, 2023</p>
         <p><span>Date Bought:</span> May 17, 2024</p>
-        <p><span>OS Version:</span> WatchOS 11.3.1 (22S555)</p>
+        <p><span>OS Version:</span> WatchOS 11.3.1 (22S560)</p>
         <p><span>Battery Health:</span></p>
         <div class="battery-icon">
             <div class="battery-level" style="width: 97%;"></div>
@@ -637,7 +637,7 @@
         <p><span>Price:</span> $742.29</p>
         <p><span>Date Released:</span> January 17, 2023</p>
         <p><span>Date Bought:</span> May 16, 2024</p>
-        <p><span>OS Version:</span> macOS Sequoia 15.3.1 (24D5055b)</p>
+        <p><span>OS Version:</span> macOS Sequoia 15.3.1 (24D70)</p>
     </div>
 </div>
 
